[package]
name = "dns_caching_exp"
version = "0.1.0"
edition = "2021"

[dependencies]
# reqwest = { version = "0.12", features = ["hickory-dns"] }
# tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["hickory-dns"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
hickory-resolver = "*"
futures = "0.3.31"
# hickory-dns = "0.24.4"

